expose port, persistence config+media, increase vol size

--- a/values.yaml
+++ b/values.yaml
@@ -19,7 +19,7 @@ fullnameOverride: ""
 enableDLNA: false
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 8096
   ## Specify the nodePort value for the LoadBalancer and NodePort service types.
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
@@ -34,7 +34,7 @@ service:
   ## Use loadBalancerIP to request a specific static IP,
   ## otherwise leave blank
   ##
-  loadBalancerIP:
+  loadBalancerIP: 192.168.1.1
   # loadBalancerSourceRanges: []
   ## Set the externalTrafficPolicy in the Service to either Cluster or Local
   # externalTrafficPolicy: Cluster
@@ -54,7 +54,7 @@ ingress:
 
 persistence:
   config:
-    enabled: false
+    enabled: true
     ## jellyfin configuration data Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
     ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -71,7 +71,7 @@ persistence:
     accessMode: ReadWriteOnce
     size: 1Gi
   media:
-    enabled: false
+    enabled: true
     ## Directory where media is persisted
     ## If defined, storageClassName: <storageClass>
     ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -86,7 +86,7 @@ persistence:
     # existingClaim: your-claim
     # subPath: some-subpath
     accessMode: ReadWriteOnce
-    size: 10Gi
+    size: 100Gi
   extraExistingClaimMounts: []
     # - name: external-mount
     #   mountPath: /srv/external-mount
